--- a/style.css
+++ b/style.css
@@ -75,6 +75,15 @@ a:hover {
     color:#fff;
 }
 
+.foto-bulet {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto 20px auto;
+}
+
 #btnnihpencet {
     display: inline-block;
     padding: 8px 20px;
