--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
 
 main {
     padding: 25px;
-    max-width: min(600px, 90%);  
+    max-width: 90%;  
     width: 100%;
     margin: 40px auto;
     background: #2a2a2a;
@@ -37,6 +37,20 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 600px) {
+    main {
+        padding: 15 px;
+        margin: 20px auto;
+    }
+
+    h1, h2 {
+        font-size: i.2em; }
+    body {
+        font-size: 14px;
+    }
 }
 
 h1 {
